--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p1.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/cadd/p1.xhtml
@@ -12,8 +12,8 @@
 
         <div class="TexAlCenter">
             <div class="PortfolioCreationFields">
-            <div class="mobileFullWidth"><h3 class="formFS" > I plan on investing </h3></div>
-            <pe:inputNumber id="initialIid"
+            <div class="mobileFullWidth"><h3 class="formFS" > I plan on investing</h3> </div>
+             <pe:inputNumber id="initialIid"
                             styleClass="invInputText input_investwid1 amountBRmobileSupport mobileFullWidthinput"
                           value="#{tcmpb.initialInvestment}"
                           maxlength="11" symbol="$"
@@ -113,7 +113,13 @@
                          <h:outputText value="Next" />
                          </p:commandLink>
          </div>         
-    
+    <div style="display: none;">
+    <img src="#{tcmpb.getRiskGraphic(1)}"/>
+    <img src="#{tcmpb.getRiskGraphic(2)}"/>
+    <img src="#{tcmpb.getRiskGraphic(3)}"/>
+    <img src="#{tcmpb.getRiskGraphic(4)}"/>
+    <img src="#{tcmpb.getRiskGraphic(5)}"/>
+    </div>
     </div>
 
 </ui:composition>
