--- a/tcm/modules/web/src/main/webapp/pages/consumer/tcm/signup.xhtml
+++ b/tcm/modules/web/src/main/webapp/pages/consumer/tcm/signup.xhtml
@@ -7,8 +7,7 @@
                 template="/template/common/template.xhtml">
 
     <f:metadata>
-        <f:viewParam name="acct" value="#{tcmpb.beanAcctnum}"/>
-        <f:event type="preRenderView" listener="#{tcmpb.simpleSignup}"/>
+        <f:viewParam name="acct" value="#{cto.beanacctnum}"/>
     </f:metadata>
 
     <ui:define name="content">
@@ -31,13 +30,13 @@
                                     <div class="ContainerIndent">
                                         <div class="Container50">
                                             <p:inputText id="firstName" styleClass="Container95 Fleft MarAuto Fs18"
-                                                         value="#{cto.userdata.firstName}" placeholder="FirstName"
+                                                         value="#{tdcto.userdata.firstName}" placeholder="FirstName"
                                                          required="true" requiredMessage="Please enter First Name.">
                                             </p:inputText>
                                         </div>
                                         <div class="Container50">
                                             <p:inputText id="lastName" styleClass="Container95 Fs18" style="margin-left: 2px"
-                                                         value="#{cto.userdata.lastname}" placeholder="Last Name"
+                                                         value="#{tdcto.userdata.lastName}" placeholder="Last Name"
                                                          required="true" requiredMessage="Please enter Last Name.">
                                                 <p:watermark for="lastName" value="Last Name"/>
                                             </p:inputText>
@@ -47,10 +46,11 @@
                                     <div class="Container100">
                                         <div class="ContainerIndent">
                                             <p:inputText id="email" styleClass="Container80 Fleft MarAuto Fs18"
-                                                         value="#{cto.userdata.email}" placeholder="Email"
+                                                         value="#{tdcto.userdata.email}" placeholder="Email"
                                                          required="true" requiredMessage="Please enter Email."
                                                          validatorMessage="Email format is not correct.">
                                                 <p:watermark for="email" value="Email Address"/>
+                                                <f:validator validatorId="EmailValidator" />
                                             </p:inputText>
 
                                         </div>
@@ -61,7 +61,7 @@
                                 <f:facet name="footer">
                                     <p:commandButton value="Register" type="submit" styleClass="Fright"
                                                      update="@form"
-                                                     actionListener="#{cto.openCustodyAcct}"/>
+                                                     actionListener="#{tdcto.creteSimpleSignup}"/>
                                 </f:facet>
 
                             </p:panel>
